# CtFirstSemestr

Lab1/: CMakeLists.txt  main.c
Lab1/task1/: task1.c  task1.h
Lab1/task2/: task2.c  task2.h
Lab10/: CMakeLists.txt  main.c
Lab10/task1/: task1.c  task1.h
Lab10/task2/: task2.c  task2.h
Lab10/task3/: task3.c  task3.h
Lab10/task4/: task4.c  task4.h
Lab2/: CMakeLists.txt  main.c
Lab2/task1/: task1.c
Lab2/task2/: task2.c
Lab3/: CMakeLists.txt  main.c
Lab3/task1/: task1.c  task1.h
Lab3/task2/: task2.c  task2.h
Lab3/task3/: task3.c  task3.h
Lab3/task4/: task4.c  task4.h
Lab3/task5/: task5.c  task5.h
Lab3/task6/: task6.c  task6.h
Lab3/task7/: task7.c  task7.h
Lab4/: CMakeLists.txt  main.c
Lab4/task1/: task1.c  task1.h
Lab4/task2/: task2.c  task2.h
Lab4/task3/: task3.c  task3.h
Lab5/: CMakeLists.txt  main.c
Lab5/task1/: task1.c  task1.h
Lab5/task2/: task2.c  task2.h
Lab5/task3/: task3.c  task3.h
Lab6/: CMakeLists.txt  main.c
Lab6/task1/: task1.c
Lab7/: CMakeLists.txt  main.c
Lab7/task1/: task1.c  task1.h
Lab8/: CMakeLists.txt  main.c
Lab8/task1/: task1.c  task1.h
Lab8/task2/: task2.c  task2.h
Lab8/tasksFromLab6/: tasksFromLab6.c  tasksFromLab6.h
Lab9/: CMakeLists.txt  main.c
Lab9/tasks/: tasks.c  tasks.h  tests.h
